--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,8 +1,8 @@
 :root {
   /* Colors */
-  --color-primary: #1890ff;
-  --color-primary-light: #e6f7ff;
-  --color-primary-dark: #096dd9;
+  --color-primary: #65CDA3;
+  --color-primary-light: #E8F7F1;
+  --color-primary-dark: #4BAF8E;
   --color-success: #18a058;
   --color-warning: #f0a020;
   --color-error: #d03050;
